--- a/04-lire_des_donnees.Rmd
+++ b/04-lire_des_donnees.Rmd
@@ -3,28 +3,28 @@
 ## readxl : lire des données Excel 
 La fonction `read_excel()` permet d'importer les données d'un fichier Excel. On peut spécifier : 
 
-- la feuille, les colonnes, les lignes ou la zone à importer
-- les lignes à supprimer avant importation
-- si on souhaite importer la première ligne comme des noms de variables ou non
-- le format des variables importées
-- la valeur qui sera interprétée comme étant la valeur manquante
+- la feuille, les colonnes, les lignes ou la zone à importer,  
+- les lignes à supprimer avant importation,  
+- si on souhaite importer la première ligne comme des noms de variables ou non,  
+- le format des variables importées,  
+- la valeur qui sera interprétée comme étant la valeur manquante.
 
 ```{r lire_1}
 library(readxl)
-sitadel <- read_excel ("data/ROES_201702.xls", sheet = "AUT_REG",
-                    col_types = c ("text","text","numeric","numeric","numeric","numeric"))
-datatable (sitadel)
+sitadel <- read_excel("data/ROES_201702.xls", sheet = "AUT_REG",
+                      col_types = c ("text","text","numeric","numeric","numeric","numeric"))
+datatable(sitadel)
 ```
 
 ## read_delim : lire des fichiers plats 
 
 La fonction `read_delim()` permet d'importer les données d'un fichier csv. Elle fonctionne de la même façon que `read_excel()`. On peut spécifier : 
 
-- le délimiteur de colonne
-- les lignes à supprimer avant importation
-- si on souhaite importer la première ligne comme des noms de variables ou non
-- le `locale` du fichier
-- la valeur qui sera interprétée comme étant la valeur manquante
+- le délimiteur de colonne,  
+- les lignes à supprimer avant importation,  
+- si on souhaite importer la première ligne comme des noms de variables ou non,  
+- le `locale` du fichier,  
+- la valeur qui sera interprétée comme étant la valeur manquante.
 
 `read_csv()`, `read_csv2()` et `read_tsv()` sont des implémentations prérenseignées de `read_delim` pour lire des fichiers plats avec séparateurs **,** **;** et **tabulaire**.
 
@@ -34,28 +34,28 @@ Parfois, les données que nous exploitons sont disponibles sur le web.
 Il est possible, directement depuis R, de télécharger ces données et, si nécessaire, de les décompresser (dans le répertoire de travail).
 Exemple sur les données SEQUOIA de l'ACOSS :
 
-```{r lire_2, eval=F}
+```{r lire_2, eval=FALSE}
 url <- "http://www.acoss.fr/files/Donnees_statistiques/SEQUOIA_TRIM_REGION.zip"
-download.file (url, destfile = "SEQUOIA_TRIM_REGION.zip", method = "auto")
-unzip (zipfile = "SEQUOIA_TRIM_REGION.zip")
-SEQUOIA <- read_excel ("SEQUOIA_TRIM_REGION_BRUT.xlsx", sheet = "PAYS_DE_LA_LOIRE")
-datatable (SEQUOIA)
+download.file(url, destfile = "data/SEQUOIA_TRIM_REGION.zip", method = "auto")
+unzip(zipfile = "data/SEQUOIA_TRIM_REGION.zip", exdir = "data")
+SEQUOIA <- read_excel("data/SEQUOIA_TRIM_REGION_BRUT.xlsx", sheet = "PAYS_DE_LA_LOIRE")
+datatable(SEQUOIA)
 ```
 
 ## Lire des fichiers avec une dimension spatiale
 
 Le package `sf` (pour simple feature) permet d'importer dans R un fichier ayant une dimension spatiale. Après importation, le fichier est un dataframe avec une variable d'un type nouveau : la géométrie. Deux exemples ici pour lire des données au format shape et geojson.
 
-```{r lire_3, eval = F, message = F,warning = F}
-Carte_EPCI_France <- st_read (dsn = "data/refgeo2017", layer = "Contour_epci_2017_region")
-plot (Carte_EPCI_France)
+```{r lire_3, eval = FALSE, message = FALSE, warning = FALSE}
+Carte_EPCI_France <- st_read(dsn = "data/refgeo2017", layer = "Contour_epci_2017_region")
+plot(Carte_EPCI_France)
 
-communes2017 <- st_read (dsn = "data/refgeo2017/communes2017.geojson")
-plot (communes2017)
+communes2017 <- st_read(dsn = "data/refgeo2017/communes2017.geojson")
+plot(communes2017)
 ```
 
 Le package `sf` contient l'ensemble des fonctions permettant des manipulations sur fichiers géomatiques.
-On ne traitera pas ici de toutes ces fonctions en détail, mais la [documentation du package](https://r-spatial.github.io/sf/).
+On ne traitera pas ici de toutes ces fonctions en détail, se référer pour cela à la [documentation du package](https://r-spatial.github.io/sf/).
 
 A noter que `sf` étant complètement compatible avec les packages du `tidyverse`, la géométrie se conçoit comme une une donnée comme une autre, sur laquelle par exemple on peut réaliser des aggrégations.
 
@@ -69,22 +69,22 @@ Deux approches possibles pour utiliser des données stockées dans une base de d
 
 ### Lire des données sous PostgreSQL : première approche
 
-```{r lire_4, eval=F}
+```{r lire_4, eval=FALSE}
 #Définition du driver
-drv <- dbDriver ("PostgreSQL") 
+drv <- dbDriver("PostgreSQL") 
 
 #Définition de la base de données
-con <- dbConnect (drv, dbname = "dbname", host = "ip", port = numero_du_port,
+con <- dbConnect(drv, dbname = "dbname", host = "ip", port = numero_du_port,
                   user = "user_name", password = "pwd") 
 
 #Spécification de l'encodage, obligatoire avec Windows
-postgresqlpqExec (con, "SET client_encoding = 'windows-1252'") 
+postgresqlpqExec(con, "SET client_encoding = 'windows-1252'") 
 
 #Téléchargement de la table analyse du schéma pesticide
-parametre <- dbGetQuery (con, "SELECT * FROM pesticides.parametre") 
+parametre <- dbGetQuery(con, "SELECT * FROM pesticides.parametre") 
 
 #Téléchargement de données avec dimension spatiale via la fonction st_read du package simple feature
-station = st_read (con, query = "SELECT * FROM pesticides.station")
+station = st_read(con, query = "SELECT * FROM pesticides.station")
 ```
 
 On voit que pour importer notre table analyse, on a simplement lancé une requête SQL.
@@ -92,40 +92,41 @@ On peut bien sûr avec la même fonction lancer n'importe quelle requête sur la
 
 ### Lire des données sous PostgreSQL : seconde approche
 
-```{r lire_5, eval=F,message=F,warning=F}
+```{r lire_5, eval=FALSE, message=FALSE, warning=FALSE}
 #définition du driver
-drv <- dbDriver ("PostgreSQL") 
+drv <- dbDriver("PostgreSQL") 
 
 #définition de la base de données
-con <- dbConnect (drv, dbname = "dbname", host = "ip", port = numero_du_port, user = "user_name", password = "pwd") 
+con <- dbConnect(drv, dbname = "dbname", host = "ip", port = numero_du_port, 
+                 user = "user_name", password = "pwd") 
 
 #spécification de l'encodage, obligatoire avec windows
-postgresqlpqExec (con, "SET client_encoding = 'windows-1252'") 
+postgresqlpqExec(con, "SET client_encoding = 'windows-1252'") 
 
 #téléchargement de la table analyse du schéma pesticide
-analyse_db <- tbl (con, in_schema ("pesticides", "analyse"))
+analyse_db <- tbl(con, in_schema ("pesticides", "analyse"))
 ```
 
-Ici la table *analyse* n'est pas chargée dans l'environnement R, R s'est juste *connecté* à la de données.
+Ici la table *analyse* n'est pas chargée dans l'environnement R, R s'est juste *connecté* à la base de données.
 
-On peut réaliser des opérations sur la table analyse avec du code R très simplement. Par exemple pour filtrer sur les analyses relatives au Glyphosate : 
+On peut réaliser des opérations sur la table *analyse* avec du code R très simplement. Par exemple pour filtrer sur les analyses relatives au Glyphosate : 
 
-```{r lire_6, eval=F,message=F,warning=F}
-analyse_db <-  filter (analyse_db, code_parametre == 1506)
+```{r lire_6, eval=FALSE, message=FALSE, warning=FALSE}
+analyse_db <-  filter(analyse_db, code_parametre == 1506)
 ```
 
 >Attention, ce code ne touche pas la base de donnée, il n'est pas exécuté.
 >Pour l'exécuter, il faut par exemple afficher la table.
 
-```{r lire_7, eval=F}
+```{r lire_7, eval=FALSE}
 analyse_db
 ```
 
 Même une fois le code exécuté, cette base n'est pas encore un dataframe.
-Pour importer la table, on utile la fonction `collect()`
+Pour importer la table, on utilise la fonction `collect()`
 
-```{r lire_8, eval=F}
-analyse_db <- collect (analyse_db)
+```{r lire_8, eval=FALSE}
+analyse_db <- collect(analyse_db)
 ```
 
 Cette approche est à conseiller sur d'importantes bases de données, et sans dimension spatiale, car `dbplyr` ne sait pas encore lire ce type de variable (ce qui ne saurait tarder).
@@ -136,21 +137,22 @@ L'Insee met à disposition un webservice d'accès à des données de référence
 Un package R, [rsdmx](https://github.com/opensdmx/rsdmx) permet de se connecter directement à ces données. 
 Deux approches sont possibles. La première permet d'accéder à une série particulière.
 
-```{r lire_9, eval=F}
+```{r lire_9, eval=FALSE}
 url <- "https://bdm.insee.fr/series/sdmx/data/SERIES_BDM/001564471"
-datainsee <- as.data.frame (readSDMX (url))
+datainsee <- as.data.frame(readSDMX(url))
+# Encoding(levels(datainsee$TITLE_FR)) <- "UTF-8"
 ```
 
 Cette approche peut être utilisée pour télécharger plusieurs séries en même temps. Ici par exemple nous téléchargeons l'ensemble des données sur les créations et défaillances d'entreprises pour les secteurs de la construction et de l'immobilier sur les Pays de la Loire.
 
-```{r lire_10, eval=F}
+```{r lire_10, eval=FALSE}
 url <- "https://bdm.insee.fr/series/sdmx/data/SERIES_BDM/001564471+001564503+001564799+001564823+001582441+001582578+001582597+001582745+001656155+001656161+001655989+001655995"
-datainsee <- as.data.frame (readSDMX (url))
+datainsee <- as.data.frame(readSDMX(url))
 ```
 
 L'autre approche permet de télécharger un ensemble de données d'une thématique appelé *dataflow.* Ici, par exemple, on va télécharger l'ensemble des données relatives à la construction neuve :
 
-```{r lire_11, eval=F}
+```{r lire_11, eval=FALSE}
 url <- "https://bdm.insee.fr/series/sdmx/data/CONSTRUCTION-LOGEMENTS"
-datainsee <- as.data.frame (readSDMX (url))
+datainsee <- as.data.frame(readSDMX(url))
 ```
